tests/ui/async-await/issue-64130-non-send-future-diags.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-64130-non-send-future-diags.rs:23:13
   |
LL |     is_send(foo());
   |             ^^^^^ future returned by `foo` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, u32>`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-64130-non-send-future-diags.rs:17:11
   |
LL |     let g = x.lock().unwrap();
   |         - has type `std::sync::MutexGuard<'_, u32>` which is not `Send`
LL |     baz().await;
   |           ^^^^^ await occurs here, with `g` maybe used later
note: required by a bound in `is_send`
  --> $DIR/issue-64130-non-send-future-diags.rs:9:15
   |
LL | fn is_send<T: Send>(t: T) { }
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 1 previous error

